# django_ex

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
influx_app/: apps.py  models.py  urls.py  views.py
influx_app/migrations/: 0001_initial.py
influx_app/templates/influx_app/: index.html
