[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["None"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
influxdb = "^5.3.1"
django = "^5.0"
influxdb-client = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
